# OmniShell

./: .gitignore  README.md  agent.py  app.py  install.sh  models.py  pyproject.toml  requirements.txt  translator.py  universal.py
static/: script.js  style.css
templates/: analytics.html  index.html  login.html  register.html  setup.html
universal_terminal_agent/: agent.py  detector.py
